// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SampleTypePropertiesPanel appPropertiesOnly 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form>
      <div
        className="row margin-bottom margin-top"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="row margin-top"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <div
            className="overlay-trigger"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="label-help-target"
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel default props 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form>
      <div
        className="row margin-bottom margin-top"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel include dataclass and use custom labels 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form>
      <div
        className="row margin-bottom margin-top"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel includeMetricUnitProperty 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form>
      <div
        className="row margin-bottom margin-top"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="row margin-top"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <div
            className="overlay-trigger"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="label-help-target"
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
    <div
      className="row margin-top"
    >
      <div
        className="col-xs-2"
      >
        Metric 
        <span
          className="domain-no-wrap"
        >
          Unit
          <div
            className="overlay-trigger"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="label-help-target"
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
          
        </span>
      </div>
      <div
        className="col-xs-3"
      >
        <input
          className="form-control"
          name="metricUnit"
          onChange={[Function]}
          placeholder="Enter a unit"
          required={false}
          type="text"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel metricUnitOptions 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      className="domain-field-section-heading"
    >
      General Properties
    </div>
    <form>
      <div
        className="row margin-bottom margin-top"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="domain-field-section-heading top-spacing"
    >
      Storage Settings
    </div>
    <div
      className="row margin-top"
    >
      <div
        className="col-xs-2"
      >
        Label 
        <span
          className="domain-no-wrap"
        >
          Color
          <div
            className="overlay-trigger"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="label-help-target"
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
          
        </span>
      </div>
      <div
        className="col-xs-10"
      >
        <div
          className="color-picker"
        >
          <button
            className="color-picker__button btn btn-default"
            onClick={[Function]}
            type="button"
          >
            None
            <i
              className="fa fa-caret-down"
            />
          </button>
          <div
            className="color-picker__picker"
          />
        </div>
      </div>
    </div>
    <div
      className="row margin-top"
    >
      <div
        className="col-xs-2"
      >
        Stored Amount Display 
        <span
          className="domain-no-wrap"
        >
          Unit
          <div
            className="overlay-trigger"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="label-help-target"
            >
              <span
                className="label-help-icon fa fa-question-circle"
              />
            </span>
          </div>
           *
        </span>
      </div>
      <div
        className="col-xs-3"
      >
        <div
          className="select-input-container sampleset-metric-unit-select-container"
        >
          <div
            className="sampleset-metric-unit-select"
          >
            <div
              className="select-input css-b62m3t-container"
              id="selectinput-30"
              onKeyDown={[Function]}
            >
              <span
                className="css-1f43avz-a11yText-A11yText"
                id="react-select-2-live-region"
              />
              <span
                aria-atomic="false"
                aria-live="polite"
                aria-relevant="additions text"
                className="css-1f43avz-a11yText-A11yText"
                role="log"
              />
              <div
                className="select-input__control css-13cymwt-control"
                onMouseDown={[Function]}
                onTouchEnd={[Function]}
              >
                <div
                  className="select-input__value-container css-1fdsijx-ValueContainer"
                >
                  <div
                    className="select-input__placeholder css-1jqq78o-placeholder"
                    id="react-select-2-placeholder"
                  >
                    Select a unit...
                  </div>
                  <div
                    className="select-input__input-container css-qbdosj-Input"
                    data-value=""
                  >
                    <input
                      aria-activedescendant=""
                      aria-autocomplete="list"
                      aria-describedby="react-select-2-placeholder"
                      aria-expanded={false}
                      aria-haspopup={true}
                      autoCapitalize="none"
                      autoComplete="off"
                      autoCorrect="off"
                      className="select-input__input"
                      disabled={false}
                      id="react-select-2-input"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      required={true}
                      role="combobox"
                      spellCheck="false"
                      style={
                        {
                          "background": 0,
                          "border": 0,
                          "color": "inherit",
                          "font": "inherit",
                          "gridArea": "1 / 2",
                          "label": "input",
                          "margin": 0,
                          "minWidth": "2px",
                          "opacity": 1,
                          "outline": 0,
                          "padding": 0,
                          "width": "100%",
                        }
                      }
                      tabIndex={0}
                      type="text"
                      value=""
                    />
                  </div>
                </div>
                <div
                  className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                >
                  <span
                    className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                  />
                  <div
                    aria-hidden="true"
                    className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                    onMouseDown={[Function]}
                    onTouchEnd={[Function]}
                  >
                    <svg
                      aria-hidden="true"
                      className="css-tj5bde-Svg"
                      focusable="false"
                      height={20}
                      viewBox="0 0 20 20"
                      width={20}
                    >
                      <path
                        d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                      />
                    </svg>
                  </div>
                </div>
              </div>
              <input
                name="metricUnit"
                type="hidden"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SampleTypePropertiesPanel nameExpressionInfoUrl 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-panel-header-expanded labkey-page-nav"
    id="sample-type-properties-hdr"
    onClick={[Function]}
  >
    <span
      className="domain-panel-title"
    >
      Sample Type Properties
    </span>
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row margin-bottom"
    >
      <div
        className="col-xs-12"
      >
        <div
          className="row"
        >
          <div
            className="col-xs-12"
          >
            <a
              className="domain-field-float-right"
              href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createSampleSet"
              rel="noopener noreferrer"
              target="_blank"
            >
              Learn more about designing sample types
            </a>
          </div>
        </div>
      </div>
    </div>
    <form>
      <div
        className="row margin-bottom margin-top"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Name
             *
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-name"
            onChange={[Function]}
            placeholder="Enter a name for this sample type"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <span
            className="domain-no-wrap"
          >
            Description
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
            
          </span>
        </div>
        <div
          className="col-xs-10"
        >
          <textarea
            className="form-control"
            id="entity-description"
            onChange={[Function]}
            value=""
          />
        </div>
      </div>
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-2"
        >
          <div
            className="name-expression-label-div"
            onMouseEnter={[Function]}
          >
            Naming 
            <span
              className="domain-no-wrap"
            >
              Pattern
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
              
            </span>
          </div>
        </div>
        <div
          className="col-xs-10"
        >
          <input
            className="form-control"
            id="entity-nameExpression"
            onChange={[Function]}
            placeholder="Enter a naming pattern (e.g., S-\${now:date}-\${dailySampleCount})"
            type="text"
            value=""
          />
        </div>
      </div>
    </form>
    <div
      className="row"
    >
      <div
        className="col-xs-2"
      />
      <div
        className="col-xs-10"
      >
        <span>
          <div
            className="form-group"
          >
            <div>
              <span
                className="container--action-button btn btn-default"
                onClick={[Function]}
              >
                <i
                  className="fa fa-plus-circle container--addition-icon"
                />
                 Add 
              </span>
              <div
                className="overlay-trigger"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <span
                  className="label-help-target"
                >
                  <span
                    className="label-help-icon fa fa-question-circle"
                  />
                </span>
              </div>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
